--- a/index.html
+++ b/index.html
@@ -88,11 +88,10 @@
                 <h3 class="font-weight-light">Who am I ?</h3>
                 <span class="line mb-5"></span>
                 <h5 class="mb-3">A Web Designer | Software Developer |</h5>
-                <p class="mt-20">Primarily, my expertise lies in crafting visually stunning and user-centric websites as a Web Designer. Leveraging my keen eye for design and understanding of user experience principles, I create seamless digital experiences using tools like Adobe Creative Suite and Figma.
-
-                    Transitioning into the realm of Software Development and Engineering, I thrive in architecting robust and scalable software solutions. Proficient in languages like Python and JavaScript, I navigate effortlessly between front-end and back-end development, ensuring the seamless functionality of applications.
-                    
-                    My analytical prowess shines through in my role as a Data Analyst. Armed with skills in data manipulation and visualization, I uncover actionable insights from complex datasets, empowering stakeholders to make informed decisions.</p>
+                <p class="mt-20">I'm Sudarsan Sharma, a dedicated electronics, communication, and information engineering student at Tribhuvan University's Himalaya
+                    College of Engineering. My passion lies in leveraging technology to drive innovation. My skills in web development, programming,
+                    copywriting and SEO, coupled with a strong drive for learning, make me a promising asset to the IT industry. I aim to bridge the gap
+                    between theory and practice, contributing significantly to technological advancements</p>
                 <a href="file:///D:/Documents/johndoe/public_html/SudarsanCV.pdf" class="btn btn-outline-danger" target="_blank"><i class="icon-down-circled2"></i>View My CV</a>
 
             </div>
