--- a/index.html
+++ b/index.html
@@ -92,7 +92,6 @@
                     College of Engineering. My passion lies in leveraging technology to drive innovation. My skills in web development, programming,
                     copywriting and SEO, coupled with a strong drive for learning, make me a promising asset to the IT industry. I aim to bridge the gap
                     between theory and practice, contributing significantly to technological advancements</p>
-                <a href="file:///D:/Documents/johndoe/public_html/SudarsanCV.pdf" class="btn btn-outline-danger" target="_blank"><i class="icon-down-circled2"></i>View My CV</a>
 
             </div>
             <div class="col-lg-4 about-card">
@@ -205,14 +204,22 @@
                     <div class="card">
                         <div class="card-header">
                             <div class="mt-2">
-                                <h4>Experience</h4>
+                                <h4>Projects</h4>
                                 <span class="line"></span>  
                             </div>
                         </div>
                         <div class="card-body">
                             <h6 class="title text-danger">2023</h6>
-                            <P>Software Engineer</P>
-                            <P class="subtitle">At XYZ Company, I contributed to various projects, showcasing my skills in HTML, CSS, and JavaScript. I collaborated with cross-functional teams to design and implement user-friendly interfaces, ensuring seamless functionality across devices.</P>
+                            <P></P>
+                            <P class="subtitle">Portfolio Development ( December 21, 2022- January 18,2023 )
+                                - Developed a portfolio which shows the information about a person, skills, work experience.
+                                Home Automation ( Feb- January 18,2023 )
+                                - Developed an app that helps a person to control the home appliance using mobile phone.
+                                2022 – 2023 – E-learning with chatbots – Third Year Minor Project
+                                - Developed E-learning platform with pdf summarizing features and chatbots using Google PaLM and RAG.
+                                2023 – 2025 – Supply Chain Management System Using Blockchain – Fourth Year Major Project
+                                - Built a decentralized ledger system for error-free and accountable supply chain management and visualize product movement
+                                and demand within the supply </P>
                         </div>
                     </div>
                 </div>
